Added an option to not send invites when inviting users to an event
